Fix spacing responsive header - title

--- a/website/static/css/blog.css
+++ b/website/static/css/blog.css
@@ -7,9 +7,3 @@
         margin-top: 48px !important;
     }
 }
-
-@media screen and (min-width: 1024px){
-    .postHeaderTitle{
-        margin-top: 0 !important;
-    }
-}
